crates/bonsaidb-macros/tests/ui/collection/invalid_attribute.stderr
error: supported fields are `authority`, `name`, `views`, `serialization`, `encryption_key`, `encryption_required`, `encryption_optional`, `primary_key`, `natural_id` and `core`
 --> tests/ui/collection/invalid_attribute.rs:4:48
  |
4 | #[collection(name = "hi", authority = "hello", "hi")]
  |                                                ^^^^

error: supported fields are `authority`, `name`, `views`, `serialization`, `encryption_key`, `encryption_required`, `encryption_optional`, `primary_key`, `natural_id` and `core`
 --> tests/ui/collection/invalid_attribute.rs:8:48
  |
8 | #[collection(name = "hi", authority = "hello", field = 200)]
  |                                                ^^^^^
